flang/test/semantics/resolve01.f90
integer :: x
!ERROR: The type of 'x' has already been declared
real :: x
end
